--- a/styles.css
+++ b/styles.css
@@ -1,11 +1,11 @@
-@import url('https://fonts.googleapis.com/css2?family=Raleway:wght@400;700&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Raleway:wght@400;700&display=swap");
 
 :root {
   box-sizing: border-box;
 
   font-size: 0.875rem;
 
-  --raleway-font: 'Raleway', sans-serif;
+  --raleway-font: "Raleway", sans-serif;
   --regular-font: 400;
   --bold-font: 700;
 
@@ -140,7 +140,7 @@ body {
 }
 
 .progress-bar__fill::after {
-  content: '';
+  content: "";
   position: absolute;
   right: 0.1em;
   bottom: 0.1em;
@@ -185,18 +185,15 @@ body {
   }
 
   .storage-info::after {
-    content: '';
+    content: "";
     position: absolute;
     bottom: -1.5em;
     right: 0;
     border: 1em solid;
     border-color: #fff #fff transparent transparent;
-
   }
 
   .storage-info__left {
     font-size: 1.9rem;
   }
 }
-
-
